[project]
name = "blazer"
version = "0.1.0"
description = "A way to track anything productivity and keep you coming back for more, version will be changed when program is finished"
authors = [{name = "Alex G"}]
requires-python = ">=3"
dependencies = ["pygame"]

[project.scripts]
blzr = "blazer:main"
